--- a/rest-store/pom.xml
+++ b/rest-store/pom.xml
@@ -81,6 +81,12 @@
 			<artifactId>jstl</artifactId>
 			<version>${jstl.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.0</version>
+		</dependency>
+
 
 	</dependencies>
 
